--- a/Site.master
+++ b/Site.master
@@ -79,7 +79,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-               <p>Alin cel batrin. Pentru al doilea commit de pe proiect</p>
+               <p>Alin cel batrin. Pentru al doilea commit de pe proiect!Commit3</p>
             </footer>
         </div>
     </form>
