--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -41,8 +41,22 @@ canvas,
 video {
   display: inline-block;
 }
+  kground-color: #00FFFF;
+             floaaudio:not([liright;
+}
 
-audio:not([controls]) {
+t;
+
+width:430px;
+}
+
+/* Alin-Calin Batrin CSS */
+
+audio:not([contr[cont[controls]) {
+  display: none;
+  he
+  
+   heighaudio:not([controls]) {
   display: none;
   height: 0;
 }
@@ -1096,34 +1110,42 @@ pre code {
     float: left;
   }
   .col-md-1 {
-    width: 8.333333333333332%;
+    width: 8.33333333333333 2}
+  .col-md66 .col-md-push-11 {
+    left: 91.66666666666666%;
   }
-  .col-md-2 {
-    width: 16.666666666666664%;
+  .col-md-pull-0 {
+    right: auto;
   }
-  .col-md-3 {
-    width: 25%;
+  .col-md-pull-1 {
+    right: 8.333333333333332%;
   }
-  .col-md-4 {
-    width: 33.33333333333333%;
+  .col-md-pull-2 {
+    right: 16.666666666666664%;
   }
-  .col-md-5 {
-    width: 41.66666666666667%;
+  .col-md-pull-3 {
+    right: 25%;
   }
-  .col-md-6 {
-    width: 50%;
+  .col-md-pull-4 {
+    right: 33.33333333333333%;
   }
-  .col-md-7 {
-    width: 58.333333333333336%;
+  .col-md-pull-5 {
+    right: 41.66666666666667%;
   }
-  .col-md-8 {
-    width: 66.66666666666666%;
+  .col-md-pull-6 {
+    right: 50%;
   }
-  .col-md-9 {
-    width: 75%;
+  .col-md-pull-7 {
+    right: 58.333333333333336%;
   }
-  .col-md-10 {
-    width: 83.33333333333334%;
+  .col-md-pull-8 {
+    righmd-pull-8 {
+    right: 66.66666666666666%;
+  }
+ t: 66.66666666666666%;
+  }
+ .66666666666666}
+  .9 {idth: 83.33333333333334%;
   }
   .col-md-11 {
     width: 91.66666666666666%;
